--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ menu:
   - title:             Funders and Industry Partners
     url:               /funding-and-industry/
   - title:             Contact Us
-    url:               /contact/
+    url:               /contact-us/
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
 legal:
