--- a/_config.yml
+++ b/_config.yml
@@ -44,10 +44,10 @@ logo:                  /assets/img/logo.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                <firstname> <lastname>
-  email:               <mail@domain.tld>
+  name:                Holly Martin
+  email:               holly.martin@telethonkids.org.au
   # # Used by `jekyll-seo-tag`:
-  # twitter:             <username>
+  # twitter:             _holly_martin_
 
 # Add links to the sidebar.
 menu:
