--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,32 +2,32 @@
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
 author1:
-  name:              <firstname> <lastname>
-  email:             <mail@domain.tld>
+  name:              Holly Martin
+  email:             holly.martin@telethonkids.org.au
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Holly is a Graduate Bioinformatician with Black Ochre Data Labs (Telethon Kids Institute/Australian National University) working on Indigenous 
+Genomics on Kaurna Country (Adelaide) in Australia. 
     
     Open `_data/authors.yml` to edit this text.
 
   # This photo will be used in the about section
   picture:
-    path:            https://via.placeholder.com/128x128
+    path:            
+https://github.com/marine-biomass-innovation/marine-biomass-innovation.github.io/blob/main/assets/img/blog/personnel-holly-martin.png
     # srcset is optional, but can be used to provide higher res versions for retina displays
-    srcset:
-      1x:            https://via.placeholder.com/128x128
-      2x:            https://via.placeholder.com/256x256
+   #  srcset:
+   #   1x:            https://via.placeholder.com/128x128
+   #   2x:            https://via.placeholder.com/256x256
 
   # Social media icons in sidebar
-  # Comment/uncommet to show/hide
+  # Comment/uncomment to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter:         <username>
-    github:          <username>
+    twitter:         _holly_martin_
+    github:          hollyanitamartin
     # email:           <mail@domain.tld>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
