--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -15,8 +15,7 @@ Genomics on Kaurna Country (Adelaide) in Australia.
 
   # This photo will be used in the about section
   picture:
-    path:            
-https://github.com/marine-biomass-innovation/marine-biomass-innovation.github.io/blob/main/assets/img/blog/personnel-holly-martin.png
+    path:             https://github.com/marine-biomass-innovation/marine-biomass-innovation.github.io/blob/main/assets/img/blog/personnel-holly-martin.png
     # srcset is optional, but can be used to provide higher res versions for retina displays
    #  srcset:
    #   1x:            https://via.placeholder.com/128x128
@@ -26,7 +25,7 @@ https://github.com/marine-biomass-innovation/marine-biomass-innovation.github.io
   # Comment/uncomment to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter:         _holly_martin_
+    twitter:         '_holly_martin_'
     github:          hollyanitamartin
     # email:           <mail@domain.tld>
     # rss:             https://<url>/feed.xml
