--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -16,8 +16,8 @@ author1:
   picture:
     path:             https://github.com/marine-biomass-innovation/marine-biomass-innovation.github.io/blob/main/assets/img/blog/personnel-holly-martin.png
     # srcset is optional, but can be used to provide higher res versions for retina displays
-   #  srcset:
-   #   1x:            https://via.placeholder.com/128x128
+     srcset:
+       1x:            https://github.com/marine-biomass-innovation/marine-biomass-innovation.github.io/blob/main/assets/img/blog/personnel-holly-martin.png
    #   2x:            https://via.placeholder.com/256x256
 
   # Social media icons in sidebar
