change github link from personal to this repo

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -24,8 +24,8 @@ author1:
   # Comment/uncomment to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter:         '_holly_martin_'
-    github:          hollyanitamartin
+    # twitter:         '_holly_martin_'
+    github:            'marine-biomass-innovation'
     # email:           <mail@domain.tld>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
