Add sidebar link for research teams page

--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,8 @@ menu:
     url:               /project-description/
   - title:             Mi'kmaw Community Partners
     url:               /mikmaw-community-partners/
+  - title:             Research Teams
+    url:               /research-teams/
   - title:             Funders and Industry Partners
     url:               /funding-and-industry/
   - title:             Contact Us
