--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ legal:
     url:               /CHANGELOG/
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © 2021. All rights reserved.
+copyright:             © 2022. All rights reserved.
 
 # Format of the permalinks
 permalink:             /:categories/:year-:month-:day-:title/
@@ -93,7 +93,7 @@ remote_theme: hydecorp/hydejack@v9
 # ----------------------------------------------------------------------------------------
  
 # Sidebar image and theme color of the site.
-accent_image:          /assets/img/sidebar-bg.jpg
+accent_image:          /assets/img/matt-hanns-schroeter-7RTiJ6WBdjA-unsplash-sq.jpg
 accent_color:          rgb(79,177,186)
 
 # This is used for the `theme-color` meta tag,
