--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,8 @@ menu:
     url:               /research-teams/
   - title:             Funders and Industry Partners
     url:               /funding-and-industry/
+  - title:             Blog
+    url:               /blog/
   - title:             Contact Us
     url:               /contact-us/
 # Add links to the footer.
