Test setting baseurl to project-description
Goal: to make the landing page an information page not the blog posts

--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ tagline:              Developing sustainable marine based entrepreneurship for l
 keywords:              []
 
 url: https://marine-biomass-innovation.github.io
-baseurl: ""
+baseurl: "/project-description"
 
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
