--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ tagline:              Developing sustainable marine based entrepreneurship for l
 keywords:              []
 
 url: https://marine-biomass-innovation.github.io
-baseurl: "/project-description"
+baseurl: ""
 
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
