Rename blog path to posts
Match filename to page path

--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ menu:
   - title:             Funders and Industry Partners
     url:               /funding-and-industry/
   - title:             Blog
-    url:               /blog/
+    url:               /posts/
   - title:             Contact Us
     url:               /contact-us/
 # Add links to the footer.
