--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ tagline:              Developing sustainable marine based entrepreneurship for l
 # A list of keywords for your blog
 keywords:              []
 
-url: https://marine-biomass-innovation.github.io
+url: https://mbiproject.ca
 baseurl: ""
 
 # A (square) logo for your site.
