edit authors.yml to remove github icon and link

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -25,7 +25,7 @@ author1:
   # Rearrange to change the order in which they appear
   social:
     # twitter:         '_holly_martin_'
-    github:            'marine-biomass-innovation'
+    # github:          'marine-biomass-innovation'
     # email:           <mail@domain.tld>
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
