--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -14,7 +14,7 @@ author1:
 
   # This photo will be used in the about section
   picture:
-    path:             https://github.com/marine-biomass-innovation/marine-biomass-innovation.github.io/blob/main/assets/img/blog/personnel-holly-martin.png
+    # path:             https://github.com/marine-biomass-innovation/marine-biomass-innovation.github.io/blob/main/assets/img/blog/personnel-holly-martin.png
     # srcset is optional, but can be used to provide higher res versions for retina displays
     # srcset:
     #   1x:           https://github.com/marine-biomass-innovation/marine-biomass-innovation.github.io/blob/main/assets/img/blog/personnel-holly-martin.png
